<resources>
    <string name="app_name">Complaint Management</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_newComplaint">New Complaint</string>
    <string name="title_complaints">My Complaints</string>
    <string name="title_profile">My Profile</string>

    <string-array name="house_category">

        <item>Old</item>
        <item>New</item>
    </string-array>
    <string name="complaint_management">Complaint Management</string>
    <string name="title_complaint_detials">Complaint Details</string>
    <string name="title_mark_completed">Mark Completed</string>
    <string-array name="complaint_category">
        <item>--Choose Problem Category--</item>
        <item>Carpentry</item>
        <item>Electrical</item>
        <item>Masonry</item>
        <item>Plumbing</item>
    </string-array>

    <string-array name="item_state">
        <item>--Choose Item State--</item>
        <item>Fresh</item>
        <item>Dismantled</item>

    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_closing_acknowledge">Closed</string>

    <string name="default_notification_channel_id">SLIET Complaint Complainant</string>

</resources>