<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ac.sliet.complaintmanagement.UI.Fragments.NewComplaint.NewComplaintFragment"
        android:label="@string/title_newComplaint"
        tools:layout="@layout/fragment_new_complaints" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ac.sliet.complaintmanagement.UI.Fragments.MyComplaints.MyComplaintsFragment"
        android:label="@string/title_complaints"
        tools:layout="@layout/fragment_my_complaints" >
        </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ac.sliet.complaintmanagement.UI.Fragments.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/navigation_complaint_details"
        android:name="ac.sliet.complaintmanagement.UI.Fragments.ComplaintDetails.ComplaintDetailsFragment"
        android:label="@string/title_complaint_detials"
        tools:layout="@layout/fragment_complaint_details" >
    </fragment>

    <fragment
        android:id="@+id/navigation_complaint_mark_completed"
        android:name="ac.sliet.complaintmanagement.UI.Fragments.MarkCompleted.MarkCompletedFragment"
        android:label="@string/title_mark_completed"
        tools:layout="@layout/fragment_mark_completed" >
    </fragment>

</navigation>